--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,41 @@
-<div class="container">
-    
+<!-- Main Content -->
+<div class="container-fluid">
+    <div class="row main-content bg-success text-center">
+        <div class="col-md-4 text-center company__info">
+            <span class="company__logo">
+                <img class="container" src="./../../../assets/img/logo.png" alt="">
+            </span>
+            
+            <h4 class="company_title">Dat Bus</h4>
+        </div>
+        <div class="col-md-8 col-xs-12 col-sm-12 login_form ">
+            <div class="container-fluid">
+                <div class="green">
+                    <h2>Log In</h2>
+                </div>
+                <div class="">
+                    <form control="" class="form-group">
+                        <div class="row">
+                            <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+                        </div>
+                        <div class="row">
+                            <!-- <span class="fa fa-lock"></span> -->
+                            <input type="password" name="password" id="password" class="form__input"
+                                placeholder="Password">
+                        </div>
+                        <div class="">
+                            <input type="checkbox" name="remember_me" id="remember_me" class="">
+                            <label for="remember_me">Remember Me!</label>
+                        </div>
+                        <div class="green">
+                            <input type="submit" value="Submit" class="btn">
+                        </div>
+                    </form>
+                </div>
+                <div class="row">
+                    <p>Don't have an account? <a href="#">Register Here</a></p>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-
