--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -14,12 +14,12 @@
                     <h2>Log In</h2>
                 </div>
                 <div class="">
-                    <form control="" class="form-group">
+                    <form [formGroup]="loginForm" class="form-group" (ngSubmit)="login()">
                         <div class="row">
-                            <input type="text" name="username" id="username" class="form__input" placeholder="Username">
+                            <input formControlName="email" type="text" name="email" id="email" class="form__input" placeholder="Email">
                         </div>
                         <div class="row">
-                            <input type="password" name="password" id="password" class="form__input"
+                            <input formControlName="password" type="password" name="password" id="password" class="form__input"
                                 placeholder="Password">
                         </div>
                         <div class="row">
