create new header component

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,5 @@
 <!-- Main Content -->
+<app-header></app-header>
 <div class="container-fluid">
     <div class="row main-content bg-success text-center">
         <div class="col-md-4 text-center company__info">
@@ -16,11 +17,12 @@
                 <div class="">
                     <form [formGroup]="loginForm" class="form-group" (ngSubmit)="login()">
                         <div class="row">
-                            <input formControlName="email" type="text" name="email" id="email" class="form__input" placeholder="Email">
+                            <input formControlName="email" type="text" name="email" id="email" class="form__input"
+                                placeholder="Email">
                         </div>
                         <div class="row">
-                            <input formControlName="password" type="password" name="password" id="password" class="form__input"
-                                placeholder="Password">
+                            <input formControlName="password" type="password" name="password" id="password"
+                                class="form__input" placeholder="Password">
                         </div>
                         <div class="row">
                             <input type="checkbox" name="remember_me" id="remember_me" class="">
