--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -28,6 +28,9 @@
                             <input type="checkbox" name="remember_me" id="remember_me" class="">
                             <label for="remember_me">Remember Me!</label>
                         </div>
+                        <div class="row">
+                            <p class="text-danger">{{msg}}</p>
+                        </div>
                         <div class="green">
                             <input type="submit" value="Login" class="btn">
                         </div>
