--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="customer/home">
         <img src="../../../../assets/img/logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
         <span class="company_title">Dat Bus</span>
     </a>
@@ -11,7 +11,11 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav my-2 my-lg-0">
             <li class="nav-item active">
-                <a class="nav-link" routerLink="/home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" routerLinkActive="link-active" href="/customer/home" routerLink="/customer/home">Home <span class="sr-only">(current)</span></a>
+                
+            </li>
+            <li class="nav-item active">
+                <a class="nav-link" routerLinkActive="link-active" href="/admin/add-schedule" routerLink="/admin/add-schedule" *ngIf="role === 'Admin'">Add Schedule <span class="sr-only">(current)</span></a>
             </li>
         </ul>
         <div class="mr-auto"></div>
@@ -19,11 +23,15 @@
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-display="static"
                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Profile
+                    <span *ngIf="username===null">Login/Sign up</span>
+                    <span *ngIf="username!==null">{{username}}</span>
+                    
                 </a>
                 <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" routerLink="/login" *ngIf="currentUrl !== '/login'">Login</a>
-                    <a class="dropdown-item" routerLink="/register" *ngIf="currentUrl !== '/register'">Sign up</a>
+                    <a class="dropdown-item" routerLink="/login" *ngIf="currentUrl !== '/login' && username ===null">Login</a>
+                    <a class="dropdown-item" routerLink="/register" *ngIf="currentUrl !== '/register' && username ===null">Sign up</a>
+                    <a class="dropdown-item" routerLink="/customer/change-profile" *ngIf="username !==null">Change profile</a>
+                    <a class="dropdown-item" href="/login" *ngIf="username !==null" (click)="logout()">Logout</a>
                 </div>
 
             </li>
