--- a/src/app/component/bus-list/bus-list.component.html
+++ b/src/app/component/bus-list/bus-list.component.html
@@ -1,35 +1,45 @@
 <div class="container">
+        <button class="btn btn-md btn-outline-success new-btn" (click)="openForm(newBus)">
+            <span class="material-symbols-outlined">
+                add
+                </span>New Bus</button>
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
                 <th>ID</th>
                 <th>Name</th>
-                <th>Phone Number</th>
-                <th>Email</th>
-                <th>Address</th>
-                <th>Username</th>
-                <th>Department</th>
-                <th>Status</th>
+                <th>Seat</th>
+                <th>Departure</th>
+                <th>Destination</th>
                 <th>Action</th>
             </tr>
         </thead>
         <tbody>
-            <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
+            <tr *ngFor="let bus of listBus">
+                <th scope="row">{{bus.busId}}</th>
+                <td>{{bus.name}}</td>
+                <td>{{bus.seat}}</td>
+                <td>{{bus.fromLocate}}</td>
+                <td>{{bus.toLocate}}</td>
                 <td>
                     <button type="button" class="btn btn-warning"><i class="fa fa-edit"></i>Edit</button>
                     <button type="button" class="btn btn-danger"><i class="fa fa-remove"></i>Danger</button>
                 </td>
-
             </tr>
         </tbody>
-
     </table>
 </div>
+
+<ng-template #newBus let-modal [modalForm] = newBus>
+    <div class="modal-header">
+        <h4 class="modal-title" id="modal-basic-title">New Operator</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <app-create-new-bus></app-create-new-bus>
+    <div class="modal-footer">
+        <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Cancel</button>
+    </div>
+</ng-template>
