--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,10 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 48
+}
