--- a/src/app/component/bus-list/bus-list.component.html
+++ b/src/app/component/bus-list/bus-list.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-        <button class="btn btn-md btn-outline-success new-btn" (click)="openForm(newBus)">
-            <span class="material-symbols-outlined">
-                add
-                </span>New Bus</button>
+    <button class="btn btn-md btn-outline-success new-btn" (click)="openForm(newBus)">
+        <span class="material-symbols-outlined">
+            add
+        </span>New Bus</button>
     <table class="table table-striped table-bordered">
         <thead>
             <tr>
@@ -30,16 +30,106 @@
     </table>
 </div>
 
-<ng-template #newBus let-modal [modalForm] = newBus>
+<ng-template #newBus let-modal>
+    <form [formGroup]="addNewBusForm" (ngSubmit)="addNewBus()">
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">New Bus</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <div class="input-group">
+                    <input id="name" class="form-control" name="name" formControlName="name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="seats">Seats</label>
+                <div class="input-group">
+                    <input type="text" id="seats" class="form-control" name="seats" formControlName="seats">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="departure">Departure</label>
+                <div class="input-group">
+                    <input id="departure" class="form-control" name="departure" formControlName="departure">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="destination">Destination</label>
+                <div class="input-group">
+                    <input id="destination" class="form-control" name="destination" formControlName="destination">
+                </div>
+            </div>
+
+
+        </div>
+        <div class="modal-footer">
+            <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Cancel</button>
+        </div>
+        <!-- <span class="text-danger">{{msg}}</span> -->
+    </form>
+</ng-template>
+
+<ng-template #editBus let-modal>
+    <form [formGroup]="editBusForm" (ngSubmit)="editBusInfo()">
+        <div class="modal-header">
+            <h4 class="modal-title" id="modal-basic-title">New Bus</h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <div class="form-group">
+                <label for="name">Name</label>
+                <div class="input-group">
+                    <input id="name" class="form-control" name="name" formControlName="name">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="seats">Seats</label>
+                <div class="input-group">
+                    <input type="text" id="seats" class="form-control" name="seats" formControlName="seats">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="departure">Departure</label>
+                <div class="input-group">
+                    <input id="departure" class="form-control" name="departure" formControlName="departure">
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="destination">Destination</label>
+                <div class="input-group">
+                    <input id="destination" class="form-control" name="destination" formControlName="destination">
+                </div>
+            </div>
+        </div>
+        <div class="modal-footer">
+            <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
+            <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Cancel</button>
+        </div>
+        <!-- <span class="text-danger">{{msg}}</span> -->
+    </form>
+</ng-template>
+
+<ng-template #deleteConfirm let-modal>
     <div class="modal-header">
-        <h4 class="modal-title" id="modal-basic-title">New Operator</h4>
+        <h4 class="modal-title">Confirm Delete</h4>
         <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
-    <app-create-new-bus></app-create-new-bus>
+    <div class="modal-body">
+        <h2>Are you sure you want to delete this record.</h2>
+        <div class="text-center">
+            <button data-dismiss="modal" class="btn btn-danger" (click)="onDelete()">Yes, Delete!</button>
+        </div>
+    </div>
     <div class="modal-footer">
-        <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
-        <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Cancel</button>
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close('Save click')">Cancel</button>
     </div>
 </ng-template>
