test func schedule management

--- a/src/app/component/create-new-bus/create-new-bus.component.html
+++ b/src/app/component/create-new-bus/create-new-bus.component.html
@@ -1,7 +1,7 @@
 <ng-template #newBus let-modal>
     <form [formGroup]="addNewBusForm" (ngSubmit)="addNewBus()">
         <div class="modal-header">
-            <h4 class="modal-title" id="modal-basic-title">New Operator</h4>
+            <h4 class="modal-title" id="modal-basic-title">New Bus</h4>
             <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
