--- a/src/app/component/bus-list/bus-list.component.html
+++ b/src/app/component/bus-list/bus-list.component.html
@@ -9,8 +9,6 @@
                 <th>ID</th>
                 <th>Name</th>
                 <th>Seat</th>
-                <th>Departure</th>
-                <th>Destination</th>
                 <th>Action</th>
             </tr>
         </thead>
@@ -19,11 +17,9 @@
                 <th scope="row">{{bus.busId}}</th>
                 <td>{{bus.name}}</td>
                 <td>{{bus.seat}}</td>
-                <td>{{bus.fromLocate}}</td>
-                <td>{{bus.toLocate}}</td>
                 <td>
                     <button type="button" class="btn btn-warning"><i class="fa fa-edit"></i>Edit</button>
-                    <button type="button" class="btn btn-danger"><i class="fa fa-remove"></i>Danger</button>
+                    <button type="button" class="btn btn-danger"><i class="fa fa-remove"></i>Delete</button>
                 </td>
             </tr>
         </tbody>
@@ -51,20 +47,6 @@
                     <input type="text" id="seats" class="form-control" name="seats" formControlName="seats">
                 </div>
             </div>
-            <div class="form-group">
-                <label for="departure">Departure</label>
-                <div class="input-group">
-                    <input id="departure" class="form-control" name="departure" formControlName="departure">
-                </div>
-            </div>
-            <div class="form-group">
-                <label for="destination">Destination</label>
-                <div class="input-group">
-                    <input id="destination" class="form-control" name="destination" formControlName="destination">
-                </div>
-            </div>
-
-
         </div>
         <div class="modal-footer">
             <button type="submit" data-dismiss="modal" class="btn btn-info">Submit</button>
