--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -2,15 +2,18 @@
     margin-top: 100px;
 }
 
-.bus-list{
+.schedule-list{
     margin-top: 100px;
     display: flex;
     max-width: 100%;
+    border: 1px solid #dde2e8;
+    border-radius: 5px;
 }
 .bus-infor{
-    margin-left: 10px;
+    padding: 10px;
     display: flex;
     flex-direction: column;
+    width: 100%;
 }
 
 .bus-img{
@@ -25,4 +28,10 @@
 .start-time{
     margin-right: 10px;
     margin-top: 10px;
+}
+
+.find-schedule{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
