--- a/src/app/component/home/home.component.css
+++ b/src/app/component/home/home.component.css
@@ -41,3 +41,14 @@
     display: flex;
     align-items: baseline;
 }
+
+.search-btn{
+    margin-bottom: -10px;
+}
+
+.note{
+    text-align: center;
+    font-style: italic;
+    color: #6c6868;
+    margin-top: 30px;
+}
