--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,12 +1,12 @@
 <div class="container">
     <div class="input-date">
-        <form class="find-schedule" [formGroup]="findScheduleForm">
+        <form class="find-schedule" [formGroup]="findScheduleForm" (submit)="getAllSchedule()">
             <div class="form-group">
                 <label for="startTime">Start Date</label>
                 <div class="input-group">
                     <input id="startDate" class="form-control" placeholder="yyyy-mm-dd" name="dp"
-                        formControlName="startDate" ngbDatepicker #d="ngbDatepicker" [(ngModel)]="model"
-                        (blur)="getAllScheduleByStartDate()" />
+                        formControlName="startDate" ngbDatepicker #d="ngbDatepicker"
+                        (blur)="getDesAndDepByStartDate()"/>
                     <button class="btn btn-outline-secondary bi bi-calendar3" (click)="d.toggle()"
                         type="button"></button>
                 </div>
@@ -14,29 +14,48 @@
             <div class="form-group">
                 <label for="departure">Departure</label>
                 <div class="input-group">
-                    <input id="departure" class="form-control" name="departure" formControlName="departure">
+                    <select id="departure" class="form-control" formControlName="bus" formControlName="departure">
+                        <option *ngFor="let d of departure" [value]="d">{{d}}</option>
+                    </select>
                 </div>
             </div>
             <div class="form-group">
                 <label for="destination">Destination</label>
                 <div class="input-group">
-                    <input id="destination" class="form-control" name="destination" formControlName="destination">
+                    <select id="destination" class="form-control" formControlName="destination" formControlName="destination">
+                        <option *ngFor="let des of destination" [value]="des">{{des}}</option>
+                    </select>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="input-group">
+                    <button type="submit" class="btn btn-success search-btn">Search</button>
                 </div>
             </div>
         </form>
-
     </div>
 
-    <div class="book-ticket" *ngFor="let schedule of listSchedule">
+    <div class="note">
+        <div *ngIf="listSchedule.length === 0 && isClicked == false">
+            <span>Select Date, Departure and Destination</span>
+        </div>
+        <div *ngIf="listSchedule.length === 0 && isClicked == true">
+            <span>Schedule not found</span>
+        </div>
+    </div>
+    
+
+    <div class="book-ticket" *ngFor="let schedule of listSchedule; let i = index">
         <div class="schedule-list">
             <div class="bus-infor">
                 <h3 class="bus-name">Start Time : {{schedule.startTime}}</h3>
                 <span class="departure">Seat Left : {{schedule.seatLeft}}</span>
                 <span class="destination">Departure: {{schedule.departure}}</span>
-                <span class="destination">Destination: {{schedule.destinations}}</span>
-
+                <span class="departure">Destination: {{schedule.destinations}}</span>
+                <span class="busId">BusId: {{schedule.bus.busId}}</span>
+                <span class="bus-name">Bus Name: {{schedule.bus.name}}</span>
             </div>
-            <button type="button" class="btn btn-success" (click)="isCollapsed = ! isCollapsed"
+            <button type="button" class="btn btn-success" (click)="collapse.toggle()"
                 [attr.aria-expanded]="!isCollapsed">
                 Select
             </button>
