add bill template

--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -45,7 +45,9 @@
                     <a class="dropdown-item" routerLink="/admin/change-profile"
                         *ngIf="username !== null && role === 'Admin'">Change
                         profile</a>
+                    <a class="dropdown-item" *ngIf="username !==null">Transcation History</a>
                     <a class="dropdown-item" href="/login" *ngIf="username !==null" (click)="logout()">Logout</a>
+
                 </div>
 
             </li>
