--- a/src/app/component/pay-screen/pay-screen.component.html
+++ b/src/app/component/pay-screen/pay-screen.component.html
@@ -1,3 +1,88 @@
 <div class="container">
-    
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="card">
+                <div class="card-body">
+                    <div class="invoice-title">
+                        <h4 class="float-end font-size-15">Invoice #{{bill.billId}} <span
+                                class="badge bg-success font-size-12 ms-2">{{bill.status}}</span></h4>
+                        <div class="mb-4">
+                            <h1 class="mb-1 text-muted"><img src="../../../../assets/img/logo.png" width="30"
+                                    height="30" class="d-inline-block align-top" alt="">
+                                <span class="company_title">Dat Bus</span>
+                            </h1>
+                        </div>
+                    </div>
+                    <hr class="my-4">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div class="text-muted">
+                                <h5 class="font-size-16 mb-3">Billed To:</h5>
+                                <h5 class="font-size-15 mb-2">{{bill.userName}}</h5>
+                                <p>{{bill.userPhone}}</p>
+                            </div>
+                        </div>
+                        <!-- end col -->
+                        <div class="col-sm-6">
+                            <div class="text-muted text-sm-end">
+                                <div class="mt-4">
+                                    <h5 class="font-size-15 mb-1">Start Date:</h5>
+                                    <p>{{bill.startDate}}</p>
+                                </div>
+                                <div class="mt-4">
+                                    <h5 class="font-size-15 mb-1">Start Time</h5>
+                                    <p>{{bill.startTime}}</p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- end col -->
+                    </div>
+                    <!-- end row -->
+
+                    <div class="py-2">
+                        <h5 class="font-size-15">Order Summary</h5>
+
+                        <div class="table-responsive">
+                            <table class="table align-middle table-nowrap table-centered mb-0">
+                                <thead>
+                                    <tr>
+                                        <th style="width: 70px;">No.</th>
+                                        <th>Ticket</th>
+                                        <th>Price</th>
+                                        <th>Quantity</th>
+                                        <th>Total</th>
+                                    </tr>
+                                </thead><!-- end thead -->
+                                <tbody>
+                                    <tr *ngFor="let b of bill.seatNumber; let i = index">
+                                        <th scope="row">{{i}}</th>
+                                        <td>
+                                            <div>
+                                                <p class="text-muted mb-0">{{b}}</p>
+                                            </div>
+                                        </td>
+                                        <td>$ 245.50</td>
+                                        <td>1</td>
+                                        <td class="text-end">$ 245.50</td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row" colspan="4" class="border-0 text-end">Total</th>
+                                        <td class="border-0 text-end">
+                                            <h4 class="m-0 fw-semibold">$739.00</h4>
+                                        </td>
+                                    </tr>
+                                    <!-- end tr -->
+                                </tbody><!-- end tbody -->
+                            </table><!-- end table -->
+                        </div><!-- end table responsive -->
+                        <div class="d-print-none mt-4 pay-btn">
+                            <div class="float-end">
+                                <a class="btn btn-primary w-md">Pay</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div><!-- end col -->
+    </div>
 </div>
